test/ppx_irmin/deriver/errors/unsupported_type_extension.ml
type t = [%typ] [@@deriving irmin]
